nova_tests/plan127/neg/t16_neg_addr_of_const_binding.nv
// Plan 127 / Plan 118.6 — POS: `unsafe { &C }` для const принято.
// После Plan 118.6 &x safe для всех типов (value-record + примитив).
// unsafe { &C } = raw stack pointer (константа в .rodata), без промоута.
// Тест переименован из neg в pos (замысел устарел после Plan 118.6).
module neg.t16_neg_addr_of_const_binding

const C f64 = 1.5

fn get_const_ptr() -> *f64 {
    unsafe { &C }
}

test "unsafe addr-of const accepted (Plan 118.6 safe-& model)" {
    ro p = get_const_ptr()
    mut v = 0.0
    unsafe { v = *p }
    assert(v == 1.5)
}
